// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Activity Feed API Can filter events by post id 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": "20",
      "next": null,
      "page": null,
      "pages": 1,
      "prev": null,
      "total": 15,
    },
  },
}
`;

exports[`Activity Feed API Can filter events by post id 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "18117",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Can limit events 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": "2",
      "next": null,
      "page": null,
      "pages": 8,
      "prev": null,
      "total": 15,
    },
  },
}
`;

exports[`Activity Feed API Can limit events 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Filter splitting Can AND two ORs 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 10,
      "next": null,
      "page": null,
      "pages": 1,
      "prev": null,
      "total": 4,
    },
  },
}
`;

exports[`Activity Feed API Filter splitting Can only combine type and other filters at the root level 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "This filter is not supported because you cannot combine type filters with other filters except at the root level in an AND.",
      "property": null,
      "type": "IncorrectUsageError",
    },
  ],
}
`;

exports[`Activity Feed API Filter splitting Can only combine type and other filters at the root level 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "315",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Filter splitting Can use NQL OR for type only 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 10,
      "next": null,
      "page": null,
      "pages": 2,
      "prev": null,
      "total": 12,
    },
  },
}
`;

exports[`Activity Feed API Filter splitting Can use NQL OR for type only 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "5279",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Filter splitting Can use OR as long as it is not combined with type 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 10,
      "next": null,
      "page": null,
      "pages": 2,
      "prev": null,
      "total": 17,
    },
  },
}
`;

exports[`Activity Feed API Filter splitting Cannot combine type filter with OR filter 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "This filter is not supported because you cannot combine type filters with other filters in an OR.",
      "property": null,
      "type": "IncorrectUsageError",
    },
  ],
}
`;

exports[`Activity Feed API Filter splitting Cannot combine type filter with OR filter 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "289",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Filter-based pagination Can do filter based pagination for aggregated clicks for all posts 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": "34",
      "next": null,
      "page": null,
      "pages": 2,
      "prev": null,
      "total": 35,
    },
  },
}
`;

exports[`Activity Feed API Filter-based pagination Can do filter based pagination for aggregated clicks for all posts 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Filter-based pagination Can do filter based pagination for aggregated clicks for all posts 3: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": "34",
      "next": null,
      "page": null,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Activity Feed API Filter-based pagination Can do filter based pagination for aggregated clicks for all posts 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Filter-based pagination Can do filter based pagination for aggregated clicks for one post 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": "8",
      "next": null,
      "page": null,
      "pages": 2,
      "prev": null,
      "total": 9,
    },
  },
}
`;

exports[`Activity Feed API Filter-based pagination Can do filter based pagination for aggregated clicks for one post 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Filter-based pagination Can do filter based pagination for aggregated clicks for one post 3: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": "8",
      "next": null,
      "page": null,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Activity Feed API Filter-based pagination Can do filter based pagination for aggregated clicks for one post 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Filter-based pagination Can do filter based pagination for all posts 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": "40",
      "next": null,
      "page": null,
      "pages": 1,
      "prev": null,
      "total": 40,
    },
  },
}
`;

exports[`Activity Feed API Filter-based pagination Can do filter based pagination for all posts 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Filter-based pagination Can do filter based pagination for one post 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": "10",
      "next": null,
      "page": null,
      "pages": 2,
      "prev": null,
      "total": 12,
    },
  },
}
`;

exports[`Activity Feed API Filter-based pagination Can do filter based pagination for one post 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Filter-based pagination Can do filter based pagination for one post 3: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": "10",
      "next": null,
      "page": null,
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Activity Feed API Filter-based pagination Can do filter based pagination for one post 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Returns aggregated_click events in activity feed 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": "aggregated_click_event",
    },
    Object {
      "data": Any<Object>,
      "type": "aggregated_click_event",
    },
    Object {
      "data": Any<Object>,
      "type": "aggregated_click_event",
    },
    Object {
      "data": Any<Object>,
      "type": "aggregated_click_event",
    },
    Object {
      "data": Any<Object>,
      "type": "aggregated_click_event",
    },
    Object {
      "data": Any<Object>,
      "type": "aggregated_click_event",
    },
    Object {
      "data": Any<Object>,
      "type": "aggregated_click_event",
    },
    Object {
      "data": Any<Object>,
      "type": "aggregated_click_event",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 10,
      "next": null,
      "page": null,
      "pages": 1,
      "prev": null,
      "total": 8,
    },
  },
}
`;

exports[`Activity Feed API Returns aggregated_click events in activity feed 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "2443",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Returns aggregated_click events in activity feed with post_id filter 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": "aggregated_click_event",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 10,
      "next": null,
      "page": null,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Activity Feed API Returns aggregated_click events in activity feed with post_id filter 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "391",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Returns click events in activity feed 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "link": Object {
          "from": "/r/9",
          "to": "https:://ghost.org",
        },
        "member": Object {
          "avatar_image": null,
          "email": "member2@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": null,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "Post with all media types - Lexical",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "link": Object {
          "from": "/r/8",
          "to": "https:://ghost.org",
        },
        "member": Object {
          "avatar_image": null,
          "email": "member1@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Mr Egg",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "Post with all media types - Mobiledoc",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "link": Object {
          "from": "/r/7",
          "to": "https:://ghost.org",
        },
        "member": Object {
          "avatar_image": null,
          "email": "with-product@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Dana Barrett",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "This is a scheduled post!!",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "link": Object {
          "from": "/r/6",
          "to": "https:://ghost.org",
        },
        "member": Object {
          "avatar_image": null,
          "email": "vip-paid@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Peter Venkman",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "This is a draft static page",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "link": Object {
          "from": "/r/5",
          "to": "https:://ghost.org",
        },
        "member": Object {
          "avatar_image": null,
          "email": "vip@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Winston Zeddemore",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "This is a static page",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "link": Object {
          "from": "/r/4",
          "to": "https:://ghost.org",
        },
        "member": Object {
          "avatar_image": null,
          "email": "comped@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Vinz Clortho",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "Not so short, bit complex",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "link": Object {
          "from": "/r/3",
          "to": "https:://ghost.org",
        },
        "member": Object {
          "avatar_image": null,
          "email": "trialing@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Ray Stantz",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "Not finished yet",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "link": Object {
          "from": "/r/2",
          "to": "https:://ghost.org",
        },
        "member": Object {
          "avatar_image": null,
          "email": "paid@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Egon Spengler",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "Short and Sweet",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "link": Object {
          "from": "/r/1",
          "to": "https:://ghost.org",
        },
        "member": Object {
          "avatar_image": null,
          "email": "member2@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": null,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "Ghostly Kitchen Sink",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "link": Object {
          "from": "/r/0",
          "to": "https:://ghost.org",
        },
        "member": Object {
          "avatar_image": null,
          "email": "member1@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Mr Egg",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "HTML Ipsum",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
      },
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 10,
      "next": null,
      "page": null,
      "pages": 1,
      "prev": null,
      "total": 10,
    },
  },
}
`;

exports[`Activity Feed API Returns click events in activity feed 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "4923",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Returns comments in activity feed 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 10,
      "next": null,
      "page": null,
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Activity Feed API Returns comments in activity feed 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1385",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Returns email delivered events in activity feed 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 10,
      "next": null,
      "page": null,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Activity Feed API Returns email delivered events in activity feed 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1074",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Returns email opened events in activity feed 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 10,
      "next": null,
      "page": null,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Activity Feed API Returns email opened events in activity feed 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1071",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Returns email sent events in activity feed 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 10,
      "next": null,
      "page": null,
      "pages": 1,
      "prev": null,
      "total": 4,
    },
  },
}
`;

exports[`Activity Feed API Returns email sent events in activity feed 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "3952",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Returns feedback events in activity feed 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "member": Object {
          "avatar_image": null,
          "email": "member2@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": null,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "Post with all media types - Lexical",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "score": Any<Number>,
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "member": Object {
          "avatar_image": null,
          "email": "member1@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Mr Egg",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "Post with all media types - Mobiledoc",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "score": Any<Number>,
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "member": Object {
          "avatar_image": null,
          "email": "with-product@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Dana Barrett",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "This is a scheduled post!!",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "score": Any<Number>,
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "member": Object {
          "avatar_image": null,
          "email": "vip-paid@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Peter Venkman",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "This is a draft static page",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "score": Any<Number>,
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "member": Object {
          "avatar_image": null,
          "email": "vip@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Winston Zeddemore",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "This is a static page",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "score": Any<Number>,
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "member": Object {
          "avatar_image": null,
          "email": "comped@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Vinz Clortho",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "Not so short, bit complex",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "score": Any<Number>,
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "member": Object {
          "avatar_image": null,
          "email": "trialing@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Ray Stantz",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "Not finished yet",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "score": Any<Number>,
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "member": Object {
          "avatar_image": null,
          "email": "paid@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Egon Spengler",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "Short and Sweet",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "score": Any<Number>,
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "member": Object {
          "avatar_image": null,
          "email": "member2@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": null,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "Ghostly Kitchen Sink",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "score": Any<Number>,
      },
      "type": Any<String>,
    },
    Object {
      "data": Object {
        "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}/,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "member": Object {
          "avatar_image": null,
          "email": "member1@test.com",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Mr Egg",
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "post": Object {
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "title": "HTML Ipsum",
          "url": Any<String>,
          "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
        },
        "score": Any<Number>,
      },
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 10,
      "next": null,
      "page": null,
      "pages": 1,
      "prev": null,
      "total": 10,
    },
  },
}
`;

exports[`Activity Feed API Returns feedback events in activity feed 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "4563",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Activity Feed API Returns signup events in activity feed 1: [body] 1`] = `
Object {
  "events": Array [
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
    Object {
      "data": Any<Object>,
      "type": Any<String>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 10,
      "next": null,
      "page": null,
      "pages": 1,
      "prev": null,
      "total": 8,
    },
  },
}
`;

exports[`Activity Feed API Returns signup events in activity feed 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "21855",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;
